<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>finance.tradista.app</groupId>
		<artifactId>parent</artifactId>
		<version>${parent.version}</version>
		<relativePath>../tradista-parent</relativePath>
	</parent>
	<groupId>finance.tradista.core</groupId>
	<artifactId>core-common</artifactId>
	<version>${core-common.version}</version>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.core</groupId>
			<artifactId>position-ejb-interface</artifactId>
			<version>${position-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.core</groupId>
			<artifactId>transfer-ejb-interface</artifactId>
			<version>${transfer-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.core</groupId>
			<artifactId>marketdata-ejb-interface</artifactId>
			<version>${marketdata-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.ir</groupId>
			<artifactId>ir-ejb-interface</artifactId>
			<version>${ir-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.mm</groupId>
			<artifactId>mm-ejb-interface</artifactId>
			<version>${mm-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.security</groupId>
			<artifactId>security-ejb-interface</artifactId>
			<version>${security-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.ai</groupId>
			<artifactId>ai-ejb-interface</artifactId>
			<version>${ai-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.core</groupId>
			<artifactId>core-ejb-interface</artifactId>
			<version>${core-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.fx</groupId>
			<artifactId>fx-ejb-interface</artifactId>
			<version>${fx-ejb-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>org.wildfly.security</groupId>
			<artifactId>wildfly-elytron</artifactId>
			<version>2.0.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>jboss-ejb-client</artifactId>
			<version>5.0.1.Final</version>
		</dependency>
	</dependencies>
</project>